cabal-version:       >=1.10
name:                remote-iserv
version:             0.1.0.0
license-file:        LICENSE
author:              David Johnson
maintainer:          djohnson.m@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable remote-iserv
  main-is:             Main.hs
  build-depends:       base, libiserv
  c-sources:           cbits/main.m
  default-language:    Haskell2010
